--- a/src/pages/pages-personalchatbubble/pages-personalchatbubble.html
+++ b/src/pages/pages-personalchatbubble/pages-personalchatbubble.html
@@ -8,8 +8,7 @@
 
 <ion-content>
     <ion-grid>
-        <ion-label *ngFor='let gd of groupdetail'>Created by....{{gd.username}}</ion-label>
-        <button ion-button (click)="leave()">Leave</button>
+
         <div class='defaultmessage' *ngFor="let item1 of defaultmessage">{{this.navParams.get('room')}} is waiting for your message....</div>
         <div class='defaultmessage1' *ngFor="let item2 of defaultmessage1">{{this.navParams.get('room')}} is idle and cant see your message....</div>
         <ion-row *ngFor="let item of messageArray">
@@ -30,19 +29,30 @@
 
 </ion-content>
 
+
 <ion-footer>
     <ion-toolbar>
+
         <ion-row class="message_row">
-            <ion-col col-9>
+            <ion-col col-10>
                 <ion-item no-lines>
                     <ion-input type="text" placeholder="Message" [(ngModel)]="messageText"></ion-input>
+
                 </ion-item>
+
             </ion-col>
-            <ion-col col-3>
-                <button ion-button (click)="sendMessage()">
+            <ion-col col-2>
+
+
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-12>
+                <button full ion-button (click)="sendMessage()">
       Send
     </button>
             </ion-col>
         </ion-row>
+
     </ion-toolbar>
 </ion-footer>
