--- a/src/pages/pages-viewprofile/pages-viewprofile.html
+++ b/src/pages/pages-viewprofile/pages-viewprofile.html
@@ -62,14 +62,15 @@
 
             <ion-card-content>
                 <p>{{i.post}}</p>
-                <div class='currentdate'>{{i.time|date:'dd MMM,yy'}}</div>
+                <div class='currentdate'>{{i.time|date:'dd MMM,yy'}} {{i.time|date:'dd MMM,yy'}}</div>
             </ion-card-content>
         </ion-item-divider>
         <ion-row>
 
             <ion-col>
                 <button ion-button icon-start clear small>
-      <ion-icon name="thumbs-up"></ion-icon>
+                    <ion-icon *ngIf='!liketoggle[i._id]' name="thumbs-down"></ion-icon>
+                    <ion-icon *ngIf='liketoggle[i._id]' name="thumbs-up"></ion-icon>
       <div (click)="addlikes(j,userid,i._id)"><span style="color:black; ">{{i.likes}}</span> Like</div>
     </button>
             </ion-col>
