Updated edit profile

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,6 +11,10 @@
                         <p style='color:blue; font-size: 22px; margin-right:5px;padding:5px;cursor: pointer;'>Logout</p>
                         <ion-icon name="power"></ion-icon>
                     </div>
+                    <div style="display: flex; justify-content: flex-start; align-items: center;" (tap)='gotoeditprofile()'>
+                        <p style='color:blue; font-size: 22px; margin-right:5px;padding:5px;cursor: pointer;'>Edit</p>
+                        <ion-icon name="pencil"></ion-icon>
+                    </div>
                 </ion-label>
 
             </ion-item>
