--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,6 @@
             <ion-item menuClose detail-none>
                 <ion-icon name="close"></ion-icon>
             </ion-item>
-
             <ion-item>
                 <ion-label>
                     <div style="display: flex; justify-content: flex-start; align-items: center;" (tap)='logout()'>
@@ -46,14 +45,11 @@
     <div style='padding:10px;font-size:20px;display: flex; justify-content: center; align-items: center;'>Hallo!
         <div class='hand'></div> {{username}}..</div>
     <br>
-    <div style='padding:5px;font-size:20px;display: flex; justify-content: center; align-items: center;'>Check what's happening arround you!.</div>
-
+    <div style='padding:5px;font-size:20px;display: flex; justify-content: center; align-items: center;'>Check what's happening around you!.</div>
     <!-- <div class='but'>
         <div class='writeicon'></div>
         <div class='but1' (click)='gotoaddpost()'>Add New Post</div>
     </div> -->
-
-
     <ion-card *ngFor='let i of post,let j=index'>
         <ion-item-divider>
             <ion-item>
@@ -67,25 +63,18 @@
                     <div class="dot"></div>
                     <div class="dot"></div>
                 </div>
-
-
-
             </ion-item>
-
             <ion-card-content>
                 <p>{{i.post}}</p>
                 <div class='currentdate'>{{i.time|date:'dd MMM,yy'}}</div>
             </ion-card-content>
         </ion-item-divider>
         <div class='popup' *ngIf='popuptoggle[j]'>
-
             <!-- <img src="img/advance-card-bttf.png"> -->
             <div class='popuptext' (click)='deletepost(i._id,j)'>
                 <div class="dicon"></div>Delete</div>
-
         </div>
         <ion-row>
-
             <ion-col>
                 <button ion-button icon-start clear small>
         <ion-icon *ngIf='!liketoggle[i._id]' name="thumbs-down"></ion-icon>
@@ -112,14 +101,9 @@
             </ion-avatar> -->
                         <h2 style="color:mediumblue;">{{c.username}}</h2>
                         <div class="dcicon" *ngIf='userid==c.userid' (click)='deletecomment(c._id)'>
-
                         </div>
-
-
                     </ion-item>
-
                     <!-- <img src="img/advance-card-bttf.png"> -->
-
                     <ion-card-content>
                         <p>{{c.comment}}</p>
                     </ion-card-content>
@@ -132,8 +116,6 @@
                 <ion-item>
                     <ion-textarea rows="4" [(ngModel)]='comments[j]' type="text" placeholder="Comment .... "></ion-textarea>
                 </ion-item>
-
-
                 <button ion-button small float-right round (click)="addcomment(i._id,userid,j,username)">Add Comment</button>
             </div>
         </ion-row>
