--- a/src/pages/pages-editprofile/pages-editprofile.html
+++ b/src/pages/pages-editprofile/pages-editprofile.html
@@ -11,57 +11,65 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding id="page6">
-    <ion-list id="clientProfile-list2">
 
-        <ion-item color="none" id="clientProfile-list-item4">
-            <ion-thumbnail item-left>
-                <img src="../../assets/profile.png" />
-            </ion-thumbnail>
+    <ion-item>
+        <div class="imgcontent">
+            <div class="profileimage">
+                <img class='image' src="../../assets/profile.png" *ngIf='!base64Image' />
+                <img class='image' [src]="base64Image" *ngIf='base64Image' />
+                <div class='toggleicon' (tap)='imgopttoggle()'>
+                    <ion-icon name='camera'></ion-icon>
+                </div>
+
+            </div>
+
+
+        </div>
+    </ion-item>
+    <div class="input">
+        <div>
+            <ion-label>
+                Firstname
+            </ion-label>
+        </div>
+        <ion-item>
+            <ion-input [(ngModel)]='firstname' [readonly]='isreadonly'></ion-input>
         </ion-item>
-        <div class="input">
-            <div>
-                <ion-label>
-                    Firstname
-                </ion-label>
-            </div>
-            <ion-item>
-                <ion-input [(ngModel)]='firstname' [readonly]='isreadonly'></ion-input>
-            </ion-item>
-            <div class='editico' (tap)='toggleedit()'>
-                <ion-icon *ngIf='isreadonly' name="create"></ion-icon>
-                <ion-icon *ngIf='!isreadonly' name="checkmark"></ion-icon>
-            </div>
+        <div class='editico' (tap)='toggleedit()'>
+            <ion-icon *ngIf='isreadonly' name="create"></ion-icon>
+            <ion-icon *ngIf='!isreadonly' name="checkmark"></ion-icon>
         </div>
-        <div class="input">
-            <div>
-                <ion-label>
-                    Lastname
-                </ion-label>
-            </div>
-            <ion-item>
-                <ion-input [(ngModel)]='lastname' [readonly]='isreadonly'></ion-input>
-            </ion-item>
-            <div class='editico' (tap)='toggleedit()'>
-                <ion-icon *ngIf='isreadonly' name="create"></ion-icon>
-                <ion-icon *ngIf='!isreadonly' name="checkmark"></ion-icon>
-            </div>
+    </div>
+    <div class="input">
+        <div>
+            <ion-label>
+                Lastname
+            </ion-label>
         </div>
-        <div class="input">
-            <div>
-                <ion-label>
-                    Username
-                </ion-label>
-            </div>
-            <ion-item>
-                <ion-input [(ngModel)]='username' [readonly]='isreadonly'></ion-input>
-            </ion-item>
-            <div class='editico' (tap)='toggleedit()'>
-                <ion-icon *ngIf='isreadonly' name="create"></ion-icon>
-                <ion-icon *ngIf='!isreadonly' name="checkmark"></ion-icon>
-            </div>
+        <ion-item>
+            <ion-input [(ngModel)]='lastname' [readonly]='isreadonly'></ion-input>
+        </ion-item>
+        <div class='editico' (tap)='toggleedit()'>
+            <ion-icon *ngIf='isreadonly' name="create"></ion-icon>
+            <ion-icon *ngIf='!isreadonly' name="checkmark"></ion-icon>
         </div>
-        <div class="button">
-            <ion-item>
-                <button ion-button>Update</button>
-            </ion-item>
+    </div>
+    <div class="input">
+        <div>
+            <ion-label>
+                Username
+            </ion-label>
         </div>
+        <ion-item>
+            <ion-input [(ngModel)]='username' [readonly]='isreadonly'></ion-input>
+        </ion-item>
+        <div class='editico' (tap)='toggleedit()'>
+            <ion-icon *ngIf='isreadonly' name="create"></ion-icon>
+            <ion-icon *ngIf='!isreadonly' name="checkmark"></ion-icon>
+        </div>
+    </div>
+    <div class="button">
+        <ion-item>
+            <button ion-button (tap)='updateprofile()'>Update</button>
+        </ion-item>
+    </div>
