--- a/src/pages/pages-viewprofile/pages-viewprofile.html
+++ b/src/pages/pages-viewprofile/pages-viewprofile.html
@@ -39,53 +39,54 @@
     <div id="profile-bg"></div>
     <div id="content">
         <div id="profile-info">
-            <img id="profile-image" src="../../assets/profile.png">
+            <img class='profile_image_common_style' id="profile-image" *ngIf='!proimage' src="../../assets/profile.png" imageViewer>
+            <img class='profile_image_common_style' id="profile-image" *ngIf='proimage' [src]='proimage' imageViewer>
             <h3 id="profile-name">{{username|uppercase}}</h3>
             <span id="profile-description">Developer</span>
         </div>
     </div>
 
-    <ion-card *ngFor='let i of post,let j=index'>
+    <ion-card *ngFor='let i of post,let j=index '>
         <ion-item-divider>
             <ion-item>
-                <!-- <ion-avatar item-start>
-          <img src="img/marty-avatar.png">
-      </ion-avatar> -->
+                <ion-avatar item-start>
+                    <img class='profile_image_common_style ' *ngIf='proimage ' [src]="proimage" imageViewer>
+                    <img class='profile_image_common_style ' *ngIf='!proimage ' src='../../assets/profile.png ' imageViewer>
+                </ion-avatar>
                 <h2 style="color:mediumblue;">{{i.username}}</h2>
-                <div class="dcicon" *ngIf='userid==i.userid' (click)='deletepost(i._id)'>
-
-
+                <div class="dcicon" *ngIf='userid==i.userid ' (click)='deletepost(i._id) '>
                 </div>
             </ion-item>
 
             <!-- <img src="img/advance-card-bttf.png"> -->
 
             <ion-card-content>
-                <p>{{i.post}}</p>
-                <div class='currentdate'>{{i.time|date:'dd MMM,yy'}} {{i.time|date:'dd MMM,yy'}}</div>
+                <p *ngIf="i.post">{{i.post}}</p>
+                <img *ngIf="i.postimg" [src]='i.postimg' imageViewer />
+                <div class='currentdate '>{{i.time|date:'dd MMM,yy '}}</div>
             </ion-card-content>
         </ion-item-divider>
         <ion-row>
 
             <ion-col>
                 <button ion-button icon-start clear small>
-                    <ion-icon *ngIf='!liketoggle[i._id]' name="thumbs-down"></ion-icon>
-                    <ion-icon *ngIf='liketoggle[i._id]' name="thumbs-up"></ion-icon>
+                    <ion-icon *ngIf='!liketoggle[i._id] ' name="thumbs-down"></ion-icon>
+                    <ion-icon *ngIf='liketoggle[i._id] ' name="thumbs-up"></ion-icon>
       <div (click)="addlikes(j,userid,i._id)"><span style="color:black; ">{{i.likes}}</span> Like</div>
     </button>
             </ion-col>
             <ion-col>
                 <button ion-button icon-start clear small>
       <ion-icon name="text"></ion-icon>
-      <div (click)='showcommenttoggle(j)'> View Comments</div>
+      <div (click)='showcommenttoggle(j) '> View Comments</div>
     </button>
             </ion-col>
 
         </ion-row>
 
-        <ion-row *ngIf='showcommenttoggle1[j]'>
-            <div *ngFor='let c of dispcomment' style="width:100%">
-                <ion-card *ngIf='i._id==c.postid'>
+        <ion-row *ngIf='showcommenttoggle1[j] '>
+            <div *ngFor='let c of dispcomment ' style="width:100%">
+                <ion-card *ngIf='i._id==c.postid '>
 
                     <ion-item>
                         <!-- <ion-avatar item-start>
@@ -93,7 +94,7 @@
           </ion-avatar> -->
                         <h2 style="color:mediumblue;">{{c.username}}</h2>
 
-                        <div class="dcicon" *ngIf='userid==c.userid' (click)='deletecomment(c._id)'></div>
+                        <div class="dcicon" *ngIf='userid==c.userid ' (click)='deletecomment(c._id) '></div>
 
 
                     </ion-item>
@@ -108,9 +109,9 @@
             </div>
         </ion-row>
         <ion-row>
-            <div class='comment'>
+            <div class='comment ' *ngIf='showcommenttoggle1[j]'>
                 <ion-item>
-                    <ion-textarea rows="4" [(ngModel)]='comments[j]' type="text" placeholder="Comment .... "></ion-textarea>
+                    <ion-textarea rows="4" [(ngModel)]='comments[j] ' type="text" placeholder="Comment .... "></ion-textarea>
                 </ion-item>
 
 
