--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,6 @@
 <ion-tabs>
     <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-    <ion-tab [root]="addpost" tabTitle="Add Post" class="tabico" tabIcon="add-circle"></ion-tab>
-
+    <!-- <ion-tab [root]="addpost" tabTitle="Add Post" class="tabico" tabIcon="add-circle"></ion-tab> -->
     <ion-tab [root]="viewprofile" tabTitle="My Profile" tabIcon="person"></ion-tab>
     <ion-tab [root]="chat" tabTitle="Chat" tabIcon="chatboxes"></ion-tab>
 
