--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,7 +42,10 @@
 </ion-header>
 
 <ion-content>
-    <div style='padding:10px;font-size:20px;display: flex; justify-content: center; align-items: center;'>Hallo!
+    <ion-fab right bottom>
+        <button ion-fab color="primary" (click)='addpost()'><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
+    <div class='username_style'>Hallo!
         <div class='hand'></div> {{username}}..</div>
     <br>
     <div style='padding:5px;font-size:20px;display: flex; justify-content: center; align-items: center;'>Check what's happening around you!.</div>
@@ -53,11 +56,13 @@
     <ion-card *ngFor='let i of post,let j=index'>
         <ion-item-divider>
             <ion-item>
+
                 <ion-avatar item-start>
-                    <img [src]="profileimage[i.userid]">
+                    <img class='profile_image_common_style' *ngIf='profileimage[i.userid]' [src]="profileimage[i.userid]" imageViewer>
+                    <img class='profile_image_common_style' *ngIf='!profileimage[i.userid]' src='../../assets/profile.png' imageViewer>
+
                 </ion-avatar>
                 <h2 style="color:mediumblue;" (click)='gotoprofile(i.userid)'>{{i.username}}</h2>
-
                 <div class="dots" *ngIf='userid==i.userid' (click)='popuptoggle1(j)'>
                     <div class="dot"></div>
                     <div class="dot"></div>
@@ -66,7 +71,8 @@
             </ion-item>
             <hr>
             <ion-card-content>
-                <p>{{i.post}}</p>
+                <p *ngIf="i.post">{{i.post}}</p>
+                <img *ngIf="i.postimg" [src]='i.postimg' (click)='viewimage()' imageViewer />
                 <!-- <div class='currentdate1'>{{i.time|date:'h'}}</div> -->
                 <div class='currentdate'>{{i.time|date:'dd MMM,yy'}}</div>
             </ion-card-content>
@@ -79,8 +85,8 @@
         <ion-row>
             <ion-col>
                 <button ion-button icon-start clear small>
-        <ion-icon *ngIf='!liketoggle[i._id]' name="thumbs-down"></ion-icon>
-        <ion-icon *ngIf='liketoggle[i._id]' name="thumbs-up"></ion-icon>
+        <ion-icon *ngIf='!liketoggle[i._id]' name="ios-thumbs-up-outline"></ion-icon>
+        <ion-icon *ngIf='liketoggle[i._id]' name="ios-thumbs-up"></ion-icon>
                 <div (click)="addlikes(j,userid,i._id,username)"><span style="color:black; ">{{i.likes}}</span> Like</div>
                 </button>
             </ion-col>
@@ -114,7 +120,7 @@
             </div>
         </div>
         <ion-row>
-            <div class='comment'>
+            <div *ngIf='showcommenttoggle1[j]' class='comment'>
                 <ion-item>
                     <ion-textarea rows="4" [(ngModel)]='comments[j]' type="text" placeholder="Comment .... "></ion-textarea>
                 </ion-item>
