--- a/src/pages/pages-editprofile/pages-editprofile.html
+++ b/src/pages/pages-editprofile/pages-editprofile.html
@@ -38,6 +38,15 @@
                  </button></div>
 
                     </ion-col>
+                    <ion-col>
+
+                        <div class='popupicons'> <button ion-button small icon-only (click)='removephoto()'>
+                
+                  <ion-icon  name='md-close-circle'> Remove</ion-icon>
+                
+                 </button></div>
+
+                    </ion-col>
                 </div>
             </div>
 
