--- a/src/pages/pages-viewpost/pages-viewpost.html
+++ b/src/pages/pages-viewpost/pages-viewpost.html
@@ -1,23 +1,3 @@
-<ion-menu [content]="mycontent" id='myprofile' type='overlay'>
-    <ion-content #mycontent>
-        <ion-list>
-            <ion-item menuClose detail-none>
-                <ion-icon name="close"></ion-icon>
-            </ion-item>
-
-            <ion-item>
-                <ion-label>
-                    <div style="display: flex; justify-content: flex-start; align-items: center;" (tap)='logout()'>
-                        <p style='color:blue; font-size: 22px; margin-right:5px;padding:5px;cursor: pointer;'>Logout</p>
-                        <ion-icon name="power"></ion-icon>
-                    </div>
-                </ion-label>
-
-            </ion-item>
-
-        </ion-list>
-    </ion-content>
-</ion-menu>
 <ion-header>
     <ion-navbar>
         <ion-title>
@@ -69,7 +49,7 @@
 
             <ion-col>
                 <button ion-button icon-start clear small>
-                    <ion-icon *ngIf='!liketoggle[i._id]' name="thumbs-down"></ion-icon>
+                    <ion-icon *ngIf='!liketoggle[i._id]' name="ios-thumbs-up-outline"></ion-icon>
                     <ion-icon *ngIf='liketoggle[i._id]' name="thumbs-up"></ion-icon>
     <div (click)="addlikes(j,userid,i._id)"><span style="color:black; ">{{i.likes}}</span> Like</div>
   </button>
